--- a/client/package.json
+++ b/client/package.json
@@ -14,9 +14,11 @@
     "pixi.js": "^7.2.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-player": "^2.15.1",
     "react-router-dom": "^6.14.2",
     "socket.io-client": "^4.7.1",
-    "styled-components": "^6.0.7"
+    "styled-components": "^6.0.7",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.14",
