--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@vitejs/plugin-react": "^4.4.1",
     "electron": "^28.1.0",
-    "electron-builder": "^24.9.1"
+    "electron-builder": "^24.9.1",
+    "vite": "^6.3.5"
   },
   "build": {
     "appId": "com.penguinpow.game",
