--- a/package.json
+++ b/package.json
@@ -7,34 +7,58 @@
     "start": "electron .",
     "dev": "vite",
     "build": "vite build",
-    "electron:build": "electron-builder"
+    "build:client": "cd client && npm run build",
+    "build:electron": "npm run build:client && electron-builder",
+    "electron:build": "npm run build:client && electron-builder",
+    "dev:client": "cd client && npm run dev",
+    "dev:server": "cd server-io && npm run dev",
+    "dev:game": "concurrently \"npm run dev:server\" \"npm run dev:client\" \"wait-on http://localhost:3001 http://localhost:5173 && npm start\"",
+    "dev:web": "concurrently \"npm run dev:server\" \"npm run dev:client\"",
+    "dev:full": "concurrently \"npm run dev:client\" \"wait-on http://localhost:5173 && npm start\"",
+    "install:all": "npm install && cd client && npm install && cd ../server-io && npm install"
   },
   "dependencies": {
     "react-player": "^2.15.1",
+    "steamworks.js": "^0.4.0",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.4.1",
+    "concurrently": "^9.1.2",
     "electron": "^28.1.0",
     "electron-builder": "^24.9.1",
-    "vite": "^6.3.5"
+    "vite": "^6.3.5",
+    "wait-on": "^8.0.3"
   },
   "build": {
     "appId": "com.penguinpow.game",
     "productName": "PenguinPow",
+    "asar": false,
     "directories": {
       "output": "dist"
     },
     "files": [
-      "dist/**/*",
       "main.js",
-      "preload.js"
+      "preload.js",
+      "client/dist/**/*",
+      "node_modules/steamworks.js/dist/**/*",
+      "steam_appid.txt"
+    ],
+    "extraResources": [
+      {
+        "from": "node_modules/steamworks.js/dist",
+        "to": ".",
+        "filter": [
+          "**/*"
+        ]
+      }
     ],
     "mac": {
       "category": "public.app-category.games"
     },
     "win": {
-      "target": "nsis"
+      "sign": null,
+      "verifyUpdateCodeSignature": false
     },
     "linux": {
       "target": "AppImage"
