--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "concurrently": "^9.1.2",
     "electron": "^28.1.0",
     "electron-builder": "^24.9.1",
+    "sharp": "^0.34.5",
     "vite": "^6.3.5",
     "wait-on": "^8.0.3"
   },
