--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fontsource/bungee": "^5.2.7",
+    "@fontsource/bungee-inline": "^5.2.8",
+    "@fontsource/bungee-outline": "^5.2.8",
+    "@fontsource/bungee-shade": "^5.2.7",
+    "@fontsource/noto-sans-jp": "^5.2.9",
+    "@fontsource/noto-serif-jp": "^5.2.8",
+    "@fontsource/outfit": "^5.2.8",
     "@pixi/react": "^7.1.0",
     "pixi.js": "^7.2.4",
     "react": "^18.2.0",
